# agent-harness

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  install-agent-harness.sh
consiliency-harness/: README.md  pyproject.toml
phase-loop-runtime/: MANIFEST.in  README.md  pyproject.toml
phase-loop-runtime/UNKNOWN.egg-info/: SOURCES.txt
phase-loop-runtime/baml_src/: dotfiles_adoption_manifest.baml  dotfiles_plan_manifest.baml  dotfiles_runtime_projection.baml  dotfiles_task_catalog.baml  emit_phase_closeout.baml  verification_evidence.baml
phase-loop-runtime/protocol/: protocol.md
phase-loop-runtime/scripts/: _gate_a_probe.py  check_model_id_sources.py  gate_a_cleanroom.sh  regenerate_skills_bundle.py  sweep_fleet_worktrees.sh  sync_skills_bundle.py
phase-loop-runtime/src/phase_loop_runtime/: __init__.py  _proc_cpu.py  adoption_bundle.py  agent_runtime_provider.py  baml_modular.py  build_bundle.py  capability_registry.py  classifier.py  claude_agent_view.py  cli.py  closeout.py  closeout_classifier.py  closeout_validation.py  closeout_validators.py  conformance.py  consiliency_gates.py  consiliency_ingest.py  consiliency_layout.py  consiliency_scaffold.py  cross_repo_channel.py  default_executor_resolver.py  discovery.py  dispatch_lock.py  doc_delta_validator.py  docs_audit.py  docs_freshness.py  docs_stale_scan.py  docs_surfaces.py  doctor.py  events.py  events_migration.py  evidence_audit.py  executor_availability.py  fab_canonical.py  fab_delta.py  fab_gate.py  fab_producer.py  fab_provenance.py  fleet_map.py  fleet_metrics.py  (+55 more)
phase-loop-runtime/src/phase_loop_runtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
phase-loop-runtime/src/phase_loop_runtime/advisor_board/: CONTRACTS.md  __init__.py  backing.py  backing_omnigent.py  config.py  events.py  fixtures.py  harness_mapping.py  matrix.py  observability.py  presets.py  registries.py  resolver.py  schema.py  standin.py  validation.py
phase-loop-runtime/src/phase_loop_runtime/baml_src/: emit_phase_closeout.baml
phase-loop-runtime/src/phase_loop_runtime/conformance/: __init__.py  certificate_tier.py  git_grounded_projection.py  outside_agent_advisory.py  outside_agent_core.py  outside_agent_imports.py  outside_agent_pin.py  outside_agent_provenance.py  outside_agent_real.py  outside_agent_real_output.py  outside_agent_redaction.py  outside_agent_schema.py  outside_agent_vectors.py
phase-loop-runtime/src/phase_loop_runtime/convergence/: __init__.py  contracts.py  dispatch.py  event_log.py  fencing.py  provider_contracts.py  reconcile.py  refresh.py  status.py
phase-loop-runtime/src/phase_loop_runtime/deploy/: phase-loop-task-message-broker.service
phase-loop-runtime/src/phase_loop_runtime/pipeline_adapter/: __init__.py  branch_ops.py  flag.py  merge_policy.py  ratification.py
phase-loop-runtime/src/phase_loop_runtime/schemas/: phase-loop-doctor.v1.golden.json  phase-loop-doctor.v1.schema.json  phase_loop_closeout.schema.json
phase-loop-runtime/tests/: __init__.py  _contract_docs.py  _dotfiles_tree.py  _launchspec_golden_cases.py  conftest.py  phase_loop_smoke_utils.py  phase_loop_test_utils.py  test_advisor_board_alias_install.py  test_advisor_board_backcompat.py  test_advisor_board_backing_homebrew.py  test_advisor_board_backing_omnigent.py  test_advisor_board_cli_legacy.py  test_advisor_board_concurrency.py  test_advisor_board_config.py  test_advisor_board_golden.py  test_advisor_board_ingestion.py  test_advisor_board_integration.py  test_advisor_board_matrix.py  test_advisor_board_observability.py  test_advisor_board_presets.py  test_advisor_board_registries.py  test_advisor_board_resolver.py  test_advisor_board_schema.py  test_advisor_twin_alias_legacy.py  test_agent_runtime_provider_cs08.py  test_autosel.py  test_branchgov_preflight.py  test_certificate_tier.py  test_cli_train_status_45.py  test_closeout_classifier.py  test_closeout_convergence_fixes.py  test_closeout_exception_vocab.py  test_closeout_new_owned_directory_closes_clean.py  test_closeout_validator_hook.py  test_closeout_verification_gate.py  test_codex_effort_max_clamp_49.py  test_committed_range_diff.py  test_conformance_golden.py  test_consiliency_dual_layout.py  test_consiliency_gates.py  (+316 more)
phase-loop-runtime/tests/data/: def4_executor_closeout_namespaced.jsonl  legacy_def4_pre_writer_namespacing.jsonl
phase-loop-runtime/tests/data/conformance_golden/: conformance.v0.1.json.sha256
phase-loop-runtime/tests/data/launchspec_golden/: launchspec_golden.json
phase-loop-runtime/tests/data/standalone_golden/: events.jsonl  state.json
phase-loop-runtime/tests/fixtures/: bom-current.json  bom-stale.json
phase-loop-runtime/tests/fixtures/convergence/: freeze-metadata.json
phase-loop-runtime/tests/fixtures/omnigent_contract/: PROVENANCE.md
phase-loop-runtime/tests/fixtures/outside_agent_advisory/: clean_submission.json  expected_summary.json  malformed_submission.json  provenance_submission.json  redaction_submission.json
phase-loop-runtime/tests/fixtures/outside_agent_real/: clean_submission.json  provenance_submission.json  redaction_submission.json
phase-loop-runtime/tests/fixtures/phase_loop_dfparsoak/: matrix.json
phase-loop-runtime/tests/fixtures/phase_loop_fake_smoke/: README.md  matrix.json
phase-loop-runtime/tests/fixtures/phase_loop_harness_policy/: matrix.json
phase-loop-runtime/tests/fixtures/phase_loop_lane_ir/: claude-plan.md  codex-plan.md  command-plan.md  gemini-plan.md  opencode-plan.md
phase-loop-runtime/tests/fixtures/phase_loop_migration/: gemini_noisy_output.json  malformed_child_closeout.json  roadmap_amendment.json  stale_handoff_repair.json  true_human_blocker.json  verified_dirty_closeout.json
phase-loop-runtime/tests/fixtures/phase_loop_pi/: blocked.json  malformed-output.txt  redaction-rejection.txt  success.json  unsupported-tool-policy.json
phase-loop-runtime/tests/fixtures/phase_loop_pipeline_bridge/: README.md  blocked.json  complete.json  dfadoptbridge_adoption_complete.json  dfadoptbridge_archive_manifest_touched.json  dfbundlecloseout_blocked.json  (+57 more)
(+349 files in other folders)
