[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phase-loop-runtime"
version = "0.1.0"
description = "Vendored phase-loop runtime and CLI for dotfiles phase workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "baml-py>=0.222,<0.223",
    "pydantic>=2,<3",
    "PyYAML>=6,<7",
]

[project.scripts]
phase-loop = "phase_loop_runtime.cli:main"
codex-phase-loop = "phase_loop_runtime.cli:main"

# Entry-point plugin seams (DECOUPLE). Optional integrations register under
# `phase_loop_runtime.profile_commands` to add domain commands and under
# `phase_loop_runtime.skill_sources` to contribute skill source roots. The generic
# CLI loads these lazily; with an empty group it exposes no domain command (the
# seam is proven by the Gate-A clean-room harness, which strips the group from the
# installed venv). DECOUPLE is an in-place decouple: the in-tree dotfiles profile
# is registered here so a normal fleet install keeps `adoption-bundle`/`sync-skills`/
# `build-bundle`/`hotfix` working with no env var. Physically splitting this profile
# (and its skill roots) into a separate distribution is deferred to EXTRACT.
[project.entry-points."phase_loop_runtime.profile_commands"]
dotfiles = "phase_loop_runtime.dotfiles_profile_plugin:register_profile_commands"

[project.entry-points."phase_loop_runtime.skill_sources"]
dotfiles = "phase_loop_runtime.skill_sources_plugin:register_skill_sources"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# baml_src ships as package-data inside phase_loop_runtime so it travels in the
# wheel and resolves via importlib.resources regardless of installer (DECOUPLE SL-0).
# route_policy/fixtures ships the frozen cross-language route-selection contract
# (ROUTESPEC) the same way so gp #25 can pull + validate it from the wheel.
# _contract_docs / _test_fixtures bundle the runtime's OWN contract docs/fixtures
# (TESTDECOUPLE SL-2) so the runtime-core tests resolve them via importlib.resources
# and pass standalone in the extracted agent-harness layout. They are kept in
# lockstep with the canonical dotfiles sources by scripts/sync_runtime_package_data.py
# (a drift guard test asserts byte-identity).
[tool.setuptools.package-data]
phase_loop_runtime = [
    "py.typed",
    "baml_src/*.baml",
    "route_policy/fixtures/*.json",
    "schemas/*.json",
    "_contract_docs/**",
    "_test_fixtures/**",
]

# TESTDECOUPLE SL-0: the dotfiles_integration marker. Integration-bucket tests
# (which read fleet paths only present inside a dotfiles checkout) carry it and
# SKIP standalone; conftest.py's pytest_collection_modifyitems applies the skip
# when no dotfiles tree is reachable. The agent-harness CI runs
# `pytest -m "not dotfiles_integration"`.
[tool.pytest.ini_options]
markers = [
    "dotfiles_integration: test requires a dotfiles fleet tree (skipped standalone)",
]

[tool.setuptools.data-files]
"share/phase-loop-runtime/protocol" = ["protocol/protocol.md"]
