[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phase-loop-runtime"  # PyPI dist name; NOT "agent-harness" (an unrelated third-party PyPI project)
version = "0.7.0"
description = "Harness-neutral phase-loop orchestration runtime and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "ViperJuice" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "baml-py>=0.222,<0.223",
    "pydantic>=2,<3",
    "PyYAML>=6,<7",
    # PIN (spec-integration v0.3.0): floor at 0.6.3 -- ships the `gate_posture_registry`
    # AND the manifest-schema `gate_posture_overrides` key (0.6.3) that makes the dial
    # OPERABLE (a repo can declare per-repo posture overrides without failing layout_validity),
    # alongside `pipeline_ref_classes` + `git_discipline_protocol`. This
    # ACTIVATES the git-discipline guardrail AND the posture dial (per-finding-class
    # enforcement with non-retractable floors). The dial degrades gracefully on an older
    # contract (gate_posture.available() False -> legacy per-gate behavior preserved), so
    # < 0.6.2 stays safe; the floor guarantees the teeth are present. Warn-default remains;
    # human_required is never set. (0.6.0 shipped self-inconsistent version refs -> fixed in
    # 0.6.1, contract PR #18.)
    #
    # PIN (PSCAT-PL, roadmap Phase 2B): floor at 0.6.5 -- ships the
    # `protected_source_categories` registry that OWNS the coarse
    # protected_source_category vocabulary (the six pre-existing buckets +
    # `governance_contracts`). phase-loop reads that registry via
    # `consiliency_contract.load_registry` and validates against it as the SoT
    # (models.py `protected_source_categories()`), replacing the hardcoded enum.
    # Registry-present is authoritative; the runtime still degrades to the legacy
    # six-tuple if a caller runs an older contract (no hard crash), but this floor
    # guarantees the contract-owned vocabulary (incl. governance_contracts) is live.
    "consiliency-contract>=0.6.5,<0.7",
    "jsonschema>=4,<5",
    # `phase-loop doctor` (IF-0-AHADOPT-2) compares consumer pins to registry
    # latest with PEP 440 version ordering. Declared so the BOM produces real
    # stale|current verdicts on the isolated `uv tool install` path (where pip —
    # and its transitive packaging — is not present); the doctor still degrades to
    # `unknown` rather than crash if it is somehow absent.
    "packaging>=21",
    # Governed task-message resolver: authenticated Codex app-server transport
    # plus contract-identical RFC 8785 approval-body hashing.
    "websockets>=12,<16",
    "rfc8785>=0.1.4,<0.2",
    # Advisor Board config loader (ABDREG) parses advisor-boards.toml. tomllib is
    # stdlib on 3.11+; on the 3.10 requires-python floor it is absent, so pull in
    # the tomli backport there (import shim in advisor_board/config.py).
    "tomli>=2,<3; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/ViperJuice/agent-harness"
Repository = "https://github.com/ViperJuice/agent-harness"
Issues = "https://github.com/ViperJuice/agent-harness/issues"

[project.scripts]
phase-loop = "phase_loop_runtime.cli:main"
codex-phase-loop = "phase_loop_runtime.cli:main"

# Entry-point plugin seams (DECOUPLE). Optional integrations register under
# `phase_loop_runtime.profile_commands` to add domain commands and under
# `phase_loop_runtime.skill_sources` to contribute skill source roots. The generic
# CLI loads these lazily; with an empty group it exposes no domain command (the
# seam is proven by the Gate-A clean-room harness, which strips the group from the
# installed venv). DECOUPLE is an in-place decouple: the in-tree dotfiles profile
# is registered here so a normal fleet install keeps `adoption-bundle`/`sync-skills`/
# `build-bundle`/`hotfix` working with no env var. Physically splitting this profile
# (and its skill roots) into a separate distribution is deferred to EXTRACT.
[project.entry-points."phase_loop_runtime.profile_commands"]
dotfiles = "phase_loop_runtime.dotfiles_profile_plugin:register_profile_commands"

[project.entry-points."phase_loop_runtime.skill_sources"]
dotfiles = "phase_loop_runtime.skill_sources_plugin:register_skill_sources"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# baml_src ships as package-data inside phase_loop_runtime so it travels in the
# wheel and resolves via importlib.resources regardless of installer (DECOUPLE SL-0).
# route_policy/fixtures ships the frozen cross-language route-selection contract
# (ROUTESPEC) the same way so gp #25 can pull + validate it from the wheel.
# _contract_docs / _test_fixtures bundle the runtime's OWN contract docs/fixtures
# (TESTDECOUPLE SL-2) so the runtime-core tests resolve them via importlib.resources
# and pass standalone in the extracted agent-harness layout. They are kept in
# lockstep with the canonical dotfiles sources by scripts/sync_runtime_package_data.py
# (a drift guard test asserts byte-identity).
# skills_bundle ships the assembled neutral workflow skills (per-harness, overlays
# folded) so a pinned `pip install` resolves `run`/`dry-run` skill packs without a
# dotfiles overlay (#12). Generated, not hand-edited: scripts/sync_skills_bundle.py.
[tool.setuptools.package-data]
phase_loop_runtime = [
    "py.typed",
    "baml_src/*.baml",
    "route_policy/fixtures/*.json",
    "schemas/*.json",
    "_contract_docs/**",
    "_test_fixtures/**",
    "skills_bundle/**",
    "deploy/*.service",
    # advisor_board ships its frozen config-format fixture + contract doc so a
    # pinned install resolves them via importlib.resources (ABDFREEZE).
    "advisor_board/fixtures/*.toml",
    "advisor_board/CONTRACTS.md",
]

# TESTDECOUPLE SL-0: the dotfiles_integration marker. Integration-bucket tests
# (which read fleet paths only present inside a dotfiles checkout) carry it and
# SKIP standalone; conftest.py's pytest_collection_modifyitems applies the skip
# when no dotfiles tree is reachable. The agent-harness CI runs
# `pytest -m "not dotfiles_integration"`.
[tool.pytest.ini_options]
markers = [
    "dotfiles_integration: test requires a dotfiles fleet tree (skipped standalone)",
]

[tool.setuptools.data-files]
"share/phase-loop-runtime/protocol" = ["protocol/protocol.md"]
